--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,15 +15,28 @@
     line-height: 1;
     font-family: sans-serif;
   }
+
+  h1{
+    margin:10px;
+  }
   
-  
+  button{
+    background-color: rgb(168, 104, 241);
+  }
+
+
   /* Classes */
 
-  
+  .view-hihgscores, .start-button{
+    background-color: rgb(168, 104, 241); 
+  }
+
   .scores-header{
     display: flex;
     flex-direction: row;
     justify-content:space-between;
+    padding:10px;
+    margin:20px;
   }
   
   .main-content{
@@ -34,7 +47,11 @@
   }
 
   .start-section{
-    
+    display: flex;
+    flex-direction: column;
+    justify-content:space-between;
+    align-items: center;
+    margin:20px;
   }
 
   .quiz-section{
@@ -42,6 +59,7 @@
     flex-direction: column;
     justify-content: center;
     display: none;
+    margin:20px;
   }
 
   .questions-heading{
@@ -51,4 +69,9 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start;
+      margin:20px;
+  }
+
+  .start-button{
+    margin:10px; 
   }
