--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -59,7 +59,7 @@
     flex-direction: column;
     justify-content: center;
     display: none;
-    margin:20px;
+    margin:20px 50px 20px 50px;
   }
 
   .questions-heading{
